--- a/BattleShip/BattleShip.vcxproj
+++ b/BattleShip/BattleShip.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{90EEB70A-4A25-4854-9159-0EE0CC8BCA29}</ProjectGuid>
+    <ProjectGuid>{8D75E4D3-86DD-41D9-AD89-E15B755A9EE5}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BattleShip</RootNamespace>
   </PropertyGroup>
@@ -47,7 +47,8 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -61,7 +62,8 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -76,34 +78,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
+    <ClCompile Include="..\BattleShip_pp\Aircraft.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Battleship.cpp" />
+    <ClCompile Include="..\BattleShip_pp\BattleShip_pp.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Cruiser.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Destroyer.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Map.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Player.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Rule.cpp" />
+    <ClCompile Include="..\BattleShip_pp\Ship.cpp" />
+    <ClCompile Include="..\BattleShip_pp\stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Aircraft.h" />
-    <ClInclude Include="BattleShip.h" />
-    <ClInclude Include="Crusier.h" />
-    <ClInclude Include="Destroyer.h" />
-    <ClInclude Include="Map.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="Rule.h" />
-    <ClInclude Include="Ship.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Aircraft.cpp" />
-    <ClCompile Include="BattleShip.cpp" />
-    <ClCompile Include="BattleShipMain.cpp" />
-    <ClCompile Include="Crusier.cpp" />
-    <ClCompile Include="Destroyer.cpp" />
-    <ClCompile Include="Map.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="Rule.cpp" />
-    <ClCompile Include="Ship.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClInclude Include="..\BattleShip_pp\Aircraft.h" />
+    <ClInclude Include="..\BattleShip_pp\Battleship.h" />
+    <ClInclude Include="..\BattleShip_pp\Cruiser.h" />
+    <ClInclude Include="..\BattleShip_pp\Destroyer.h" />
+    <ClInclude Include="..\BattleShip_pp\Map.h" />
+    <ClInclude Include="..\BattleShip_pp\Player.h" />
+    <ClInclude Include="..\BattleShip_pp\Rule.h" />
+    <ClInclude Include="..\BattleShip_pp\Ship.h" />
+    <ClInclude Include="..\BattleShip_pp\stdafx.h" />
+    <ClInclude Include="..\BattleShip_pp\targetver.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
