--- a/BattleShip/BattleShip.vcxproj.filters
+++ b/BattleShip/BattleShip.vcxproj.filters
@@ -1,84 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="소스 파일">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="헤더 파일">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="리소스 파일">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Ship">
+      <UniqueIdentifier>{fef5dd49-4217-441a-88a8-dbe07dc056c0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="GameObject">
+      <UniqueIdentifier>{792519af-8d6b-478c-a8f8-02fe77bd5077}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
+    <ClCompile Include="..\BattleShip_pp\Aircraft.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Battleship.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Cruiser.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Destroyer.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Ship.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\BattleShip_pp.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Map.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Player.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\Rule.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BattleShip_pp\stdafx.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Aircraft.h">
+      <Filter>Ship</Filter>
     </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Battleship.h">
+      <Filter>Ship</Filter>
     </ClInclude>
-    <ClInclude Include="Ship.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Cruiser.h">
+      <Filter>Ship</Filter>
     </ClInclude>
-    <ClInclude Include="Map.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Destroyer.h">
+      <Filter>Ship</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Ship.h">
+      <Filter>Ship</Filter>
     </ClInclude>
-    <ClInclude Include="Rule.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Map.h">
+      <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Aircraft.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Player.h">
+      <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Destroyer.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\Rule.h">
+      <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Crusier.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\stdafx.h">
+      <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="BattleShip.h">
-      <Filter>헤더 파일</Filter>
+    <ClInclude Include="..\BattleShip_pp\targetver.h">
+      <Filter>GameObject</Filter>
     </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Ship.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Map.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Rule.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Aircraft.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Destroyer.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="Crusier.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="BattleShipMain.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="BattleShip.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
   </ItemGroup>
 </Project>
