--- a/BattleShip/BattleShip.vcxproj
+++ b/BattleShip/BattleShip.vcxproj
@@ -10,8 +10,32 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Aircraft.cpp" />
+    <ClCompile Include="Battleship.cpp" />
+    <ClCompile Include="BattleShipMain.cpp" />
+    <ClCompile Include="Cruiser.cpp" />
+    <ClCompile Include="Destroyer.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Rule.cpp" />
+    <ClCompile Include="Ship.cpp" />
+    <ClCompile Include="stdafx.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Aircraft.h" />
+    <ClInclude Include="Battleship.h" />
+    <ClInclude Include="Cruiser.h" />
+    <ClInclude Include="Destroyer.h" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Rule.h" />
+    <ClInclude Include="Ship.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{8D75E4D3-86DD-41D9-AD89-E15B755A9EE5}</ProjectGuid>
+    <ProjectGuid>{8D5C1418-3492-432A-9D54-98ED85525C32}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BattleShip</RootNamespace>
   </PropertyGroup>
@@ -77,30 +101,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\BattleShip_pp\Aircraft.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Battleship.cpp" />
-    <ClCompile Include="..\BattleShip_pp\BattleShip_pp.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Cruiser.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Destroyer.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Map.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Player.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Rule.cpp" />
-    <ClCompile Include="..\BattleShip_pp\Ship.cpp" />
-    <ClCompile Include="..\BattleShip_pp\stdafx.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\BattleShip_pp\Aircraft.h" />
-    <ClInclude Include="..\BattleShip_pp\Battleship.h" />
-    <ClInclude Include="..\BattleShip_pp\Cruiser.h" />
-    <ClInclude Include="..\BattleShip_pp\Destroyer.h" />
-    <ClInclude Include="..\BattleShip_pp\Map.h" />
-    <ClInclude Include="..\BattleShip_pp\Player.h" />
-    <ClInclude Include="..\BattleShip_pp\Rule.h" />
-    <ClInclude Include="..\BattleShip_pp\Ship.h" />
-    <ClInclude Include="..\BattleShip_pp\stdafx.h" />
-    <ClInclude Include="..\BattleShip_pp\targetver.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
