--- a/BattleShip/BattleShip.vcxproj.filters
+++ b/BattleShip/BattleShip.vcxproj.filters
@@ -1,79 +1,75 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
+    <Filter Include="GameObject">
+      <UniqueIdentifier>{0bf0445a-c56b-4b1c-a042-d7fbcb310f32}</UniqueIdentifier>
     </Filter>
     <Filter Include="Ship">
-      <UniqueIdentifier>{fef5dd49-4217-441a-88a8-dbe07dc056c0}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="GameObject">
-      <UniqueIdentifier>{792519af-8d6b-478c-a8f8-02fe77bd5077}</UniqueIdentifier>
+      <UniqueIdentifier>{5de8ada3-6691-43ce-a6a0-864e0101c24e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\BattleShip_pp\Aircraft.cpp">
-      <Filter>Ship</Filter>
-    </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Battleship.cpp">
-      <Filter>Ship</Filter>
-    </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Cruiser.cpp">
-      <Filter>Ship</Filter>
-    </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Destroyer.cpp">
-      <Filter>Ship</Filter>
-    </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Ship.cpp">
-      <Filter>Ship</Filter>
-    </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\BattleShip_pp.cpp">
+    <ClCompile Include="BattleShipMain.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Map.cpp">
+    <ClCompile Include="Map.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Player.cpp">
+    <ClCompile Include="Player.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\Rule.cpp">
+    <ClCompile Include="Rule.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="..\BattleShip_pp\stdafx.cpp">
+    <ClCompile Include="stdafx.cpp">
       <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Cruiser.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="Destroyer.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="Ship.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="Aircraft.cpp">
+      <Filter>Ship</Filter>
+    </ClCompile>
+    <ClCompile Include="Battleship.cpp">
+      <Filter>Ship</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\BattleShip_pp\Aircraft.h">
-      <Filter>Ship</Filter>
-    </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Battleship.h">
-      <Filter>Ship</Filter>
-    </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Cruiser.h">
-      <Filter>Ship</Filter>
-    </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Destroyer.h">
-      <Filter>Ship</Filter>
-    </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Ship.h">
-      <Filter>Ship</Filter>
-    </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Map.h">
+    <ClInclude Include="Map.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Player.h">
+    <ClInclude Include="Player.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\Rule.h">
+    <ClInclude Include="Rule.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\stdafx.h">
+    <ClInclude Include="stdafx.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="..\BattleShip_pp\targetver.h">
+    <ClInclude Include="targetver.h">
       <Filter>GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Cruiser.h">
+      <Filter>Ship</Filter>
+    </ClInclude>
+    <ClInclude Include="Destroyer.h">
+      <Filter>Ship</Filter>
+    </ClInclude>
+    <ClInclude Include="Ship.h">
+      <Filter>Ship</Filter>
+    </ClInclude>
+    <ClInclude Include="Aircraft.h">
+      <Filter>Ship</Filter>
+    </ClInclude>
+    <ClInclude Include="Battleship.h">
+      <Filter>Ship</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
