--- a/BattleShip_pp/BattleShip_pp.vcxproj
+++ b/BattleShip_pp/BattleShip_pp.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{7E50E65D-85B0-48A6-BD4F-03EBD03E01C4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>BattleShip_pp</RootNamespace>
+    <ProjectName>BattleShip_pp</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
